______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.212:                                (1.0.0-beta5)

* Logdoc
  - The validation of the Logdoc XML files is now done using the local files
    when the declaration uses 1.0 alpha.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.211:                                (1.0.0-beta4)

* XINS/Java Common Library:
  - Fixed SF.net bug #1051551: Changed HTTPServiceCaller so it now correctly
    recognizes an UnknownHostException and throw an UnknownHostCallException
    instead. This allows fail-over in all situations that involve an 'Unknown
    host' error. Added UnknownHostCallException as subclass of
    ConnectionCallException.
  - Improved tests for HTTP service caller.
  - Improved Javadoc documentation.

* XINS/Java Client Framework:
  - Added tests for class XINSCallResultParser.
  - Improved Javadoc documentation.

* XINS/Java Server Framework:
  - Fixed SF.net bug #1032469. Previously, a negative reload interval not
    handled properly. Now the framework will not accept this any longer and
    enter a failure state, Added 2 states to the APIServlet for this:
    DETERMINE_INTERVAL and DETERMINE_INTERVAL_FAILED.
  - Removed log message 1412. The relevant information is in log message 3200
    already, logged directly by the FileWatcher when the file watch thread
    starts running.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.210:                                (1.0.0-beta3)

* XINS/Java Server Framework:
  - Logging warning if the current XINS version is not a production release.
  - Added test for the _GetStatistics meta function.
  - Clear the list of manageable objects (children) when deinitializing the
    API as these are added during the initialisation.

* XINS/Java Client Framework: